[gd_scene load_steps=9 format=3 uid="uid://oflmp5daotau"]

[ext_resource type="Script" path="res://scenes/towers/tower.gd" id="1_1q7rv"]
[ext_resource type="Texture2D" uid="uid://2fkuol6oyahr" path="res://assets/tilesheet.png" id="2_myd87"]
[ext_resource type="PackedScene" uid="uid://cptnhkvo0lf2h" path="res://scenes/components/health_bar.tscn" id="3_o3dcn"]
[ext_resource type="Script" path="res://scenes/components/detection_zone.gd" id="4_8f5fp"]
[ext_resource type="PackedScene" uid="uid://bbaprlwmuhg7h" path="res://scenes/components/gun.tscn" id="5_e8kgm"]
[ext_resource type="AudioStream" uid="uid://bq7aa8npxcjso" path="res://assets/sounds/fire_missile.mp3" id="6_0l1ll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv0qn"]
size = Vector2(147, 146)

[sub_resource type="CircleShape2D" id="CircleShape2D_xvh1h"]
radius = 304.133

[node name="Tower" type="StaticBody2D" groups=["friendly", "tower"]]
z_index = 1
collision_layer = 256
collision_mask = 513
script = ExtResource("1_1q7rv")

[node name="Hitbox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_kv0qn")

[node name="Base" type="Sprite2D" parent="Hitbox"]
z_index = 1
position = Vector2(0.5, 0)
scale = Vector2(2.73964, 2.73964)
texture = ExtResource("2_myd87")
region_enabled = true
region_rect = Rect2(1281, 449, 62, 62)

[node name="Turret" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
z_index = 3
position = Vector2(19, 1.72804e-11)
rotation = 1.57081
scale = Vector2(1.79276, 1.79276)
texture = ExtResource("2_myd87")
region_enabled = true
region_rect = Rect2(1216, 640, 64, 64)

[node name="HealthBar" parent="." instance=ExtResource("3_o3dcn")]
unique_name_in_owner = true
z_index = 4
position = Vector2(0, -91)
health = 1000.0

[node name="DetectionZone" type="Area2D" parent="." node_paths=PackedStringArray("area")]
script = ExtResource("4_8f5fp")
area = NodePath("CollisionShape2D")
radius = 500.0
show_area = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_xvh1h")
debug_color = Color(0, 0.6, 0.701961, 0.101961)

[node name="Gun" parent="." instance=ExtResource("5_e8kgm")]
unique_name_in_owner = true
fire_rate = 3.0
projectile_scene_path = "res://scenes/projectiles/missile.tscn"
sfx = ExtResource("6_0l1ll")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
